# casamento

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
app/: consts.py  database.py  dto.py  main.py  persistence.py  schemas.py  utils.py
app/routes/: auth.py  gift.py  guest.py
app/web/: confirm.py  gifts.py  home.py  login.py  panel.py  prewedding.py  start.py  utils.py
app/web/components/: menu.py  pix.py
